fix: alignment adjusted at home page

--- a/frontend/src/app/hompage/icons-home/icons-home.component.css
+++ b/frontend/src/app/hompage/icons-home/icons-home.component.css
@@ -3,7 +3,8 @@
   flex-wrap: wrap;
   justify-content: space-around; /* Ajusta o espaçamento entre as divs se necessário */
   margin: 0 auto;
-  padding: 20px;
+  margin-bottom: -20px;
+  padding: 20px 20px 0px 20px;
   gap: 10px; /* Espaço entre as divs */
 }
 
